--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "node serve.js"
+    "start": "nodemon serve.js"
   },
   "dependencies": {
     "finalhandler": "^1.3.0",
-    "serve-static": "^1.15.0"
+    "jsdom": "^25.0.0",
+    "serve-static": "^1.15.0",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.34"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
